@@ -11,6 +11,7 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.lang.management.ManagementFactory;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -325,7 +326,7 @@ public class ConfigurationManager implements Cloneable, Closeable {
             throw new ArgumentException(e, e.getMsg() + "\n\n" + usage);
         } catch (IllegalAccessException e) {
             throw new ArgumentException(e, "Failed to write argument into Options");
-        } catch (InstantiationException e) {
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             throw new ArgumentException(e, "Failed to instantiate a field of Options.");
         }
     }
@@ -341,6 +342,10 @@ public class ConfigurationManager implements Cloneable, Closeable {
 
     public static void addFileFormatFactory(FileFormatFactory f) {
         formatFactoryMap.put(f.getExtension(),f);
+    }
+
+    public static FileFormatFactory getFileFormatFactory(String extension) {
+        return formatFactoryMap.get(extension);
     }
 
     public static String validateOptions(Options options, boolean useConfigFiles) throws ArgumentException {
@@ -542,7 +547,7 @@ public class ConfigurationManager implements Cloneable, Closeable {
      * @throws ArgumentException If an argument is poorly formatted, missing a mandatory parameter, or not
      *              present in the supplied Options.
      */
-    private String[] parseOptionArguments(List<String> arguments, Options options) throws ArgumentException, IllegalAccessException, InstantiationException {
+    private String[] parseOptionArguments(List<String> arguments, Options options) throws ArgumentException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Map<String,Pair<Field,Object>> longNameMap = new HashMap<>();
         Map<Character,Pair<Field,Object>> charNameMap = new HashMap<>();
 
@@ -570,7 +575,7 @@ public class ConfigurationManager implements Cloneable, Closeable {
                 if (f.get(o) != null) {
                     logger.fine("Warning: overwriting Options field.");
                 }
-                f.set(o,f.getType().newInstance());
+                f.set(o,f.getType().getDeclaredConstructor().newInstance());
                 objectQueue.add((Options)f.get(o));
                 f.setAccessible(accessible);
             }
@@ -756,14 +761,14 @@ public class ConfigurationManager implements Cloneable, Closeable {
                             try {
                                 Class<?> clazz = Class.forName(className);
                                 if (FileFormatFactory.class.isAssignableFrom(clazz)) {
-                                    FileFormatFactory fff = (FileFormatFactory) clazz.newInstance();
+                                    FileFormatFactory fff = (FileFormatFactory) clazz.getDeclaredConstructor().newInstance();
                                     ConfigurationManager.addFileFormatFactory(fff);
                                 } else {
                                     throw new ArgumentException(curArg, className + " does not implement FileFormatFactory");
                                 }
                             } catch (ClassNotFoundException e) {
                                 throw new ArgumentException(e, curArg, "Class not found");
-                            } catch (InstantiationException | IllegalAccessException e) {
+                            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                                 throw new ArgumentException(e, curArg, "Could not instantiate class");
                             }
                         }
@@ -1862,9 +1867,6 @@ public class ConfigurationManager implements Cloneable, Closeable {
         String configName = "";
 
         try {
-            //
-            // This test is on Object.class.getName as class.getSuperclass() returns
-            // Object rather than the interfaces it implements.
             Set<Field> fields = PropertySheet.getAllFields(configurable.getClass());
             for (Field field : fields) {
                 boolean accessible = field.isAccessible();
